// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The LoginMessage component, with a button, matches the snapshot 1`] = `
.c6 {
  display: inline-block;
  height: 48px;
  padding: 12px 16px;
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  vertical-align: top;
  font: 700 14px/24px "Open Sans",sans-serif;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: 0px 0px 2px #000;
  border-bottom: 4px solid rgba(0,0,0,0.2);
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c6:hover,
.c6:focus {
  color: #fff;
}

.c6:hover,
.c6:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c6:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c0 {
  padding: 0px;
  width: 480px;
  height: 480px;
  text-align: center;
}

.c2 {
  margin-top: 20px;
  width: 200px;
}

.c1 {
  margin-top: 40px;
  width: 360px;
}

.c3 {
  font-size: 1.5em;
  margin: 0.8333em;
}

.c4 {
  position: relative;
  bottom: 0;
  margin-top: 40px;
  width: 100%;
}

.c5 {
  margin: 1em 0;
  width: 100%;
}

<div
  className="c0"
>
  <img
    alt="MyYoast - Yoast Academy"
    className="c1"
    src="my-yoast-academy-logo.svg"
  />
  <img
    alt=""
    className="c2"
    src="greeting.png"
  />
  <h1
    className="c3"
  >
    <span>
      Password changed successfully!
    </span>
  </h1>
  <div
    className="c4"
  >
    <a
      aria-label={undefined}
      className="c5 c6"
      href="https://example.com"
      rel={undefined}
      target={undefined}
    >
      <span>
        Continue to MyYoast
      </span>
    </a>
  </div>
</div>
`;

exports[`The LoginMessage component, with a paragraph, matches the snapshot 1`] = `
.c0 {
  padding: 0px;
  width: 480px;
  height: 480px;
  text-align: center;
}

.c2 {
  margin-top: 20px;
  width: 200px;
}

.c1 {
  margin-top: 40px;
  width: 360px;
}

.c3 {
  font-size: 1.5em;
  margin: 0.8333em;
}

.c4 {
  padding: 0 2em;
}

<div
  className="c0"
>
  <img
    alt="MyYoast - Yoast Academy"
    className="c1"
    src="my-yoast-academy-logo.svg"
  />
  <img
    alt=""
    className="c2"
    src="greeting.png"
  />
  <h1
    className="c3"
  >
    <span>
      Welcome back!
    </span>
  </h1>
  <p
    className="c4"
  >
    <span>
      Log in with your email address and password. If you don't remember your password, just reset it!
    </span>
  </p>
</div>
`;
